ingress1/ingressrule.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oneingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: af5759dbd6f5243ec8497f18551e4ab5-738815406.ap-south-1.elb.amazonaws.com
    http:
      paths:
        
         -  path: /
            pathType: Prefix
            backend:
              service: 
                name: frontendsrv
                port:
                  number: 80
         -  path: /student
            pathType: Prefix
            backend:
              service: 
                name: backendsrv
                port:
                  number: 8080
